@@ -5,4 +5,4 @@ INITRD_FS=ext2
 # What device to write floppies on
 FLOPPYDEV=/dev/fd0
 
-TYPES_SUPPORTED = cdrom netboot demo
+TYPES_SUPPORTED = cdrom netboot
