@@ -21,4 +21,4 @@ DOS_VOLUME_ID=deb00001
 DOS_VOLUME_LABEL="Debian Inst"
 
 # Currently only building on i386.
-TYPES_SUPPORTED += floppy bootfloppy speakup access hd-media
+TYPES_SUPPORTED += demo floppy bootfloppy speakup access hd-media
