@@ -7,3 +7,4 @@ KERNELNAME=vmlinux
 
 KERNELIMAGEVERSION=$(KERNELVERSION)
 
+TYPES_SUPPORTED += demo
